tests/fixtures/invalid/corrupt-config-2.yini
/*
    Important: This file consists of 2 errors.
*/

^ Section
value = 42
333 = "missing key name"	// (!) Invalid key!
enableLogging = falsy            // ERROR: Invalid boolean literal 'falsy'.
